tekton/cd/results/overlays/dogfooding/watcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  namespace: tekton-pipelines
spec:
  template:
    spec:
      containers:
        - name: watcher
          args:
            [
              "-api_addr",
              "dns:///results.dogfooding.tekton.dev",
              "-auth_mode",
              "token",
            ]
