tekton/cd/results/overlays/dogfooding/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "tekton-results-api"}'
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
  name: tekton-results-api-service
  namespace: tekton-pipelines
