tekton/cd/results/overlays/dogfooding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    dns.gardener.cloud/dnsnames: 'results.dogfooding.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: results
  namespace: tekton-pipelines
spec:
  tls:
  - secretName: tekton-results-tls
    hosts:
    - results.dogfooding.tekton.dev
  rules:
  - host: results.dogfooding.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-results-api-service
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
